# Kaiwa-Japanese-Conversation-App

./: .gitignore  CLAUDE.md  LICENSE  PROJECT_BRIEF.md  README.ja.md  README.md  STATE.md  package-lock.json  package.json
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  .gcloudignore  Dockerfile  out_hetero.txt  pyproject.toml
backend/app/: config.py  main.py  ratelimit.py
backend/app/api/: chat.py  feedback.py  reading.py  scenario.py  store.py  stt.py  translate.py  tts.py
backend/app/japanese/: __init__.py  dictionary.py  grammar.py  kana.py  tokenizer.py
backend/app/llm/: __init__.py  anthropic_provider.py  base.py  factory.py  ollama_provider.py
backend/app/models/: conversation.py  feedback.py  reading.py
backend/app/prompts/: __init__.py  feedback_prompt.py  scenario_prompt.py  system_prompt.py  translation_prompt.py
backend/app/storage/: __init__.py  store.py
backend/app/voice/: __init__.py
backend/app/voice/stt/: __init__.py  base.py  factory.py  google.py  whisper.py
backend/app/voice/tts/: __init__.py  base.py  factory.py  google.py  voicevox.py
backend/scripts/: build_dictionaries.py  deploy_cloudrun.ps1  eval_difficulty.py  eval_models.py  find_fused_particles.py
backend/tests/: test_anthropic_provider.py  test_dictionary.py  test_factory.py  test_feedback_parse.py  test_grammar.py  test_lookup_integration.py  test_scenario_parse.py  test_store.py  test_system_prompt.py  test_tokenizer.py  test_tts.py  test_voice_factory.py
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
(+57 files in other folders)
